# guitarfx_rust

./: .gitignore  CLAUDE.md  Cargo.toml  LOCAL_TESTING.md  TESTING.md  audio_test.sh  build_plugin.sh  fix_audio_performance.sh  quick_test.sh  test_install.sh  test_ir_loading.rs  troubleshoot_audio.sh
src/: lib.rs  main.rs  parameters.rs  test_ir.rs
src/dsp/: amp_sim.rs  cabinet.rs  convolution.rs  distortion.rs  filters.rs  ir_loader.rs  mod.rs
